--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <div class="container-fluid d-flex align-items-center">
     <div class="container">
-      <div class="row d-flex flex-row justify-content-between align-items-center" id="row-Specs">
+      <div class="row mt-5 d-flex flex-row justify-content-between align-items-center" id="row-Specs">
         <div class="col-md-2 mt-2">
           <h3 id="h3-Specs">Location</h3>
             <p id="p-Specs">Lekki</p>
@@ -84,7 +84,7 @@
         </div>
         <div class="col-md-2 mt-2 d-flex justify-content-center">
           <button class="SearchButton d-flex align-items-center mb-3">
-            <ion-icon name="search" class="search-Icon"></ion-icon>
+            <ion-icon name="search" class="search-Icon ms-2"></ion-icon>
             Search
           </button>
         </div>
@@ -99,7 +99,7 @@
       <h3 class="text-center title2">How it Works</h3>
         <h4 class="text-center subtitle2">This is how our products works</h4>
       <div class="row d-flex justify-content-around">
-        <div class="col-md-3 mt-5">
+        <div class="col-md-3 mt-5 me-5">
           <div class="card border-0 cardBg p-5 d-flex align-items-center">
             <img src="./img/address mark.png" class="mt-5" id="addressMark" alt="">
               <div class="card-body" id="marginBody">
@@ -117,7 +117,7 @@
               </div>
           </div>
         </div>
-        <div class="col-md-3 mt-5">
+        <div class="col-md-4 mt-5 ms-5">
           <div class="card border-0 cardBg p-5 align-items-center d-flex justify-content-end">
             <img src="./img/Secure data protection with fingerprint and lock.png" class="mt-5" id="dataProtection" alt="">
               <div class="card-body" id="marginBody">
@@ -142,7 +142,7 @@
         <div class="col-md-6 ps-5">
           <h6 class="titleThirdSection mb-4">Why you should choose us.</h6>
           <h7 class="subtitleThirdSection">
-            Creating quality urban lifestyles,building stronger communities
+            Creating quality urban lifestyles, building stronger communities
           </h7>
 
           <div class="row mt-2">
@@ -155,6 +155,59 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
+
+<div class="container-fluid d-flex vh-100 align-items-center">
+  <div class="container mb-5">
+      <h3 class="text-center title2">Our Featured Properties.</h3>
+        <h4 class="text-center subtitle2">One of our biggest product to be featured and that has sold out the most.</h4>
+
+        <div class="d-flex justify-content-end mt-4 mb-5">
+          <button class="buttonView border-0">View more</button>
+        </div>
+      
+        <div class="row d-flex justify-content-around">
+          <div class="col-md-4 d-flex justify-content-center">
+            <div class="card cardCustom border-0">
+              <img src="./img/Rectangle 4.png" class="bg-white" alt="">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-md-6 bg-white"><h5 class="cardH bg-white">PALACE</h5></div>
+                    <div class="col-md-6 bg-white py-2 d-flex justify-content-end"><h6 class="cardP bg-white">Duplex</h6></div>
+                    <div class="col-md-6 bg-white "><h5 class="cardP2 bg-white">Lekki,phase2</h5></div>
+                    <div class="col-md-6 bg-white d-flex justify-content-end"><h6 class="cardPrice bg-white">$2,000</h6></div>
+                  </div>
+                </div>
+            </div>
+          </div>
+          <div class="col-md-4 d-flex justify-content-center">
+            <div class="card cardCustom border-0" id="middleCardShadow">
+              <img src="./img/Rectangle 4-1.png" class="bg-white" alt="">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-md-6 bg-white"><h5 class="cardH bg-white">IVY RORY</h5></div>
+                    <div class="col-md-6 bg-white py-2 d-flex justify-content-end"><h6 class="cardP bg-white">Duplex</h6></div>
+                    <div class="col-md-6 bg-white "><h5 class="cardP2 bg-white">Lekki,phase2</h5></div>
+                    <div class="col-md-6 bg-white d-flex justify-content-end"><h6 class="cardPrice bg-white">$2,000</h6></div>
+                  </div>
+                </div>
+            </div>
+          </div>
+          <div class="col-md-4 d-flex justify-content-center">
+            <div class="card cardCustom border-0">
+              <img src="./img/Rectangle 4-2.png" class="bg-white" alt="">
+                <div class="card-body">
+                      <div class="row">
+                        <div class="col-md-6 bg-white"><h5 class="cardH bg-white">REXONA</h5></div>
+                        <div class="col-md-6 bg-white py-2 d-flex justify-content-end"><h6 class="cardP bg-white">Duplex</h6></div>
+                        <div class="col-md-6 bg-white "><h5 class="cardP2 bg-white">Lekki,phase2</h5></div>
+                        <div class="col-md-6 bg-white d-flex justify-content-end"><h6 class="cardPrice bg-white">$2,000</h6></div>
+                      </div>
+                </div>
+            </div>
+          </div>
+      </div>
   </div>
 </div>
     
