@igorgll [Task: Creating fifth section and footer]

--- a/index.html
+++ b/index.html
@@ -100,27 +100,27 @@
         <h4 class="text-center subtitle2">This is how our products works</h4>
       <div class="row d-flex justify-content-around">
         <div class="col-md-3 mt-5 me-5">
-          <div class="card border-0 cardBg p-5 d-flex align-items-center">
+          <div class="card cardFirstSection border-0 cardBg p-5 d-flex align-items-center">
             <img src="./img/address mark.png" class="mt-5" id="addressMark" alt="">
-              <div class="card-body" id="marginBody">
+              <div class="card-body card-bodyFirstSection" id="marginBody">
                 <h5 class="text-center" id="h5Card">Find Home</h5>
                 <p class="text-center" id="pCard">Our properties are located at prime areas where by there won't be problem with transportation.</p>
               </div>
           </div>
         </div>
         <div class="col-md-3 mt-5 ms-5 me-5">
-          <div class="card border-0 cardBg p-4 align-items-center" id="middleCard"> 
+          <div class="card cardFirstSection border-0 cardBg p-4 align-items-center" id="middleCard"> 
             <img src="./img/Smart house.png" class="mt-5" id="smartHouse" alt="">
-              <div class="card-body" id="marginBody">
+              <div class="card-body card-bodyFirstSection" id="marginBody">
                 <h5 class="text-center" id="h5Card">Make Payments</h5>
                 <p class="text-center" id="pCard">Our estates comes with good network, portable water, 24hrs light and round the clock security.</p>
               </div>
           </div>
         </div>
         <div class="col-md-4 mt-5 ms-5">
-          <div class="card border-0 cardBg p-5 align-items-center d-flex justify-content-end">
+          <div class="card cardFirstSection border-0 cardBg p-5 align-items-center d-flex justify-content-end">
             <img src="./img/Secure data protection with fingerprint and lock.png" class="mt-5" id="dataProtection" alt="">
-              <div class="card-body" id="marginBody">
+              <div class="card-body card-bodyFirstSection" id="marginBody">
                 <h5 class="text-center" id="h5Card">Make it Official</h5>
                 <p class="text-center" id="pCard">We have been in business for over 32 years, for client outside the country you can trust us to deliver well.</p>
               </div>
@@ -168,10 +168,10 @@
         </div>
       
         <div class="row d-flex justify-content-around">
-          <div class="col-md-4 d-flex justify-content-center">
+          <div class="col-md-4 d-flex justify-content-start">
             <div class="card cardCustom border-0">
               <img src="./img/Rectangle 4.png" class="bg-white" alt="">
-                <div class="card-body">
+                <div class="mt-3">
                   <div class="row">
                     <div class="col-md-6 bg-white"><h5 class="cardH bg-white">PALACE</h5></div>
                     <div class="col-md-6 bg-white py-2 d-flex justify-content-end"><h6 class="cardP bg-white">Duplex</h6></div>
@@ -184,7 +184,7 @@
           <div class="col-md-4 d-flex justify-content-center">
             <div class="card cardCustom border-0" id="middleCardShadow">
               <img src="./img/Rectangle 4-1.png" class="bg-white" alt="">
-                <div class="card-body">
+                <div class="mt-3">
                   <div class="row">
                     <div class="col-md-6 bg-white"><h5 class="cardH bg-white">IVY RORY</h5></div>
                     <div class="col-md-6 bg-white py-2 d-flex justify-content-end"><h6 class="cardP bg-white">Duplex</h6></div>
@@ -194,10 +194,10 @@
                 </div>
             </div>
           </div>
-          <div class="col-md-4 d-flex justify-content-center">
+          <div class="col-md-4 d-flex justify-content-end">
             <div class="card cardCustom border-0">
               <img src="./img/Rectangle 4-2.png" class="bg-white" alt="">
-                <div class="card-body">
+                <div class="mt-3">
                       <div class="row">
                         <div class="col-md-6 bg-white"><h5 class="cardH bg-white">REXONA</h5></div>
                         <div class="col-md-6 bg-white py-2 d-flex justify-content-end"><h6 class="cardP bg-white">Duplex</h6></div>
@@ -210,7 +210,79 @@
       </div>
   </div>
 </div>
-    
+
+<div class="container-fluid d-flex align-items-center">
+  <div class="container mb-5">
+      <h3 class="text-center title2">Testimonials.</h3>
+        <h4 class="text-center subtitle2">This is what our clients are saying</h4>
+        <div class="d-flex justify-content-end mt-4 mb-5">
+          <button class="buttonView border-0">View more</button>
+        </div>
+
+        <div class="row d-flex justify-content-around mb-5">
+          <div class="card cardLastSection border-0 p-0" style="width: 26.900rem;">
+            <div class="card-body bg-white">
+              <h5 class="card-title bg-white cardTitle">Alex Godwin</h5>
+              <h6 class="card-subtitle bg-white cardSubtitle mb-3 text-muted">South Africa</h6>
+              <p class="card-text bg-white cardText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fames ut dictumst urna, lorem nibh. Pretium leo hendrerit interdum netus</p>
+            </div>
+          </div>
+          <div class="card cardLastSection border-0 p-0" style="width: 26.900rem;">
+            <div class="card-body bg-white">
+              <h5 class="card-title bg-white cardTitle">Alex Godwin</h5>
+              <h6 class="card-subtitle bg-white cardSubtitle mb-3 text-muted">South Africa</h6>
+              <p class="card-text bg-white cardText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fames ut dictumst urna, lorem nibh. Pretium leo hendrerit interdum netus</p>
+            </div>
+          </div>
+          <div class="card cardLastSection border-0 p-0" style="width: 26.900rem;">
+            <div class="card-body bg-white">
+              <h5 class="card-title bg-white cardTitle">Alex Godwin</h5>
+              <h6 class="card-subtitle bg-white cardSubtitle mb-3 text-muted">South Africa</h6>
+              <p class="card-text bg-white cardText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fames ut dictumst urna, lorem nibh. Pretium leo hendrerit interdum netus</p>
+            </div>
+          </div>
+        </div>
+  </div>
+</div>
+
+<div class="footer">
+  <div class="container">
+    <div class="row footerRow">
+      <div class="col-md-3 bgFooter">
+        <h4 class="footerBrand bgFooter">Dee's Estate</h4>
+        <h5 class="mt-2 footerText bgFooter">Solution for easy and flexible house hunting.You can trust us anywhere through this platform </h5>
+      </div>
+      <div class="col-md-3 ps-5 bgFooter">
+        <h4 class="footerTitle ps-5 bgFooter">Property</h4>
+        <ul class="mt-4 p-0 footerSubtitle">
+          <li class="bgFooter mb-3 ps-5 text-nowrap">Learning Modules</li>
+          <li class="bgFooter mb-3 ps-5">Partnership</li>
+          <li class="bgFooter mb-3 ps-5">Watch demo</li>
+          <li class="bgFooter ps-5">Event</li>
+        </ul>
+      </div>
+      <div class="col-md-3 ps-5 bgFooter">
+        <h4 class="footerTitle ps-5 bgFooter">About</h4>
+        <ul class="mt-4 p-0 footerSubtitle">
+          <li class="bgFooter mb-3 ps-5 liHover text-nowrap">Our Company</li>
+          <li class="bgFooter mb-3 ps-5">Carrer</li>
+          <li class="bgFooter mb-3 ps-5 text-nowrap">Investors Relations</li>
+          <li class="bgFooter ps-5 text-nowrap">Social Impact</li>
+        </ul>
+      </div>
+      <div class="col-md-3 ps-5 bgFooter">
+        <h4 class="footerTitle bgFooter ps-5 ">Resources</h4>
+        <ul class="mt-4 p-0 footerSubtitle">
+          <li class="bgFooter mb-3 ps-5 text-nowrap">Contact</li>
+          <li class="bgFooter mb-3 ps-5 text-nowrap">Give feedback</li>
+          <li class="bgFooter mb-3 ps-5 text-nowrap">System status</li>
+          <li class="bgFooter ps-5 text-nowrap">Privacy Policy</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
