@igorgll [Task: Custom scrollbar]

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 </div>
 
-  <div class="container-fluid vh-100">
+  <div class="container-fluid">
     <div class="container d-flex align-items-center">
       <div class="container p-0 mt-5">
         <div class="row mb-5 p-0 m-0" id="rowWidth">
@@ -66,10 +66,11 @@
         </div>
       </div>
     </div>
+  </div>
 
-  <div class="container-fluid d-flex align-items-center">
+  <div class="container-fluid d-flex align-items-center" id="rowHeight">
     <div class="container">
-      <div class="row mt-5 d-flex flex-row justify-content-between align-items-center" id="row-Specs">
+      <div class="row d-flex flex-row justify-content-between align-items-center" id="row-Specs">
         <div class="col-md-2 mt-2">
           <h3 id="h3-Specs">Location</h3>
             <p id="p-Specs">Lekki</p>
@@ -90,9 +91,7 @@
         </div>
       </div>
     </div>
-  </div>
 </div>
-
 
 <div class="container-fluid d-flex align-items-center">
   <div class="container mb-5">
@@ -245,7 +244,7 @@
   </div>
 </div>
 
-<div class="footer">
+<div class="footer vw-100">
   <div class="container">
     <div class="row footerRow">
       <div class="col-md-3 bgFooter">
